servo_ws/log/build_2025-07-02_21-20-18/servo_control/stderr.log
  File "/home/sunrise/jianye_dev/motor_ws/install/servo_control/lib/python3.10/site-packages/servo_control/servo_control.py", line 79
    elif cmd == 5 #水平竖直全回正
                  ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expected ':'

